k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: juryslt-stage
  labels:
    app.kubernetes.io/name: jurys-cloud-consulting
    app.kubernetes.io/part-of: juryslt
