k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: juryslt-web
  namespace: juryslt-stage
  labels:
    app.kubernetes.io/name: jurys-cloud-consulting
    app.kubernetes.io/component: web
spec:
  replicas: 2
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: juryslt-web
  template:
    metadata:
      labels:
        app: juryslt-web
        app.kubernetes.io/name: jurys-cloud-consulting
        app.kubernetes.io/component: web
    spec:
      containers:
        - name: web
          image: ghcr.io/laurynasjurys/juryslt:staging
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 3
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 20
          resources:
            requests:
              cpu: 25m
              memory: 64Mi
            limits:
              cpu: 150m
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
      securityContext:
        fsGroup: 1000
