k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: juryslt-web
  namespace: juryslt-stage
  labels:
    app.kubernetes.io/name: jurys-cloud-consulting
    app.kubernetes.io/component: web
spec:
  selector:
    app: juryslt-web
  ports:
    - name: http
      port: 80
      targetPort: http
