k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: juryslt-web
  namespace: juryslt-stage
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - staging.jurys.lt
      secretName: juryslt-staging-tls
  rules:
    - host: staging.jurys.lt
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: juryslt-web
                port:
                  number: 80
